[metadata]
name = d4science_galaxy_authn
author = Enol Fernandez 
author-email = enol.fernandez@egi.eu
summary = d4Science authentication wsgi filter for galaxy
description-file = README.md
description-content-type = text/x-rst; charset=UTF-8
project_urls =
    Source Code = https://github.com/enolfc/d4science-galaxy-authn.git
license = Apache-2
classifier =
    Development Status :: 5 - Beta
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
keywords =
    setup
    distutils

[files]
packages =
    d4science_galaxy_authn
